--- a/src/assets/Postlist.css
+++ b/src/assets/Postlist.css
@@ -94,4 +94,27 @@
     display: none; /* Sembunyikan sidebar pada layar kecil */
   }
 }
+.controls {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.prev-button,
+.next-button {
+  padding: 5px 15px;
+  font-size: 14px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.prev-button:hover,
+.next-button:hover {
+  background-color: #0056b3;
+}
+
 
